--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
         <!-- Meta Tags -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="keywords" content="Business Consultancy, HR Consultancy, Study Abroad">
+		<meta name="keywords" content="Business Consultancy, HR Consultancy">
 		<meta name="description" content="">
 		<meta name='copyright' content=''>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -71,8 +71,8 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+971 567589310(UAE),+91 9944877177(ind)</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com"> asmathwise@gmail.com</a></li>
+								<li><i class="fa fa-phone"></i>+971 567589310(UAE)</li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">careertechpro@outlook.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
@@ -179,20 +179,25 @@
 					<div class="col-lg-4 col-md-6 col-12">
 						<!-- Start Single Service -->
 						<div class="single-service">
-							<i class="icofont-businessman"></i>
-							<h4><a href="https://mecthr.com/service-details.html">Business Consultancy</a></h4>
-							<p>At Career TechPro HR Est, we partner with businesses to drive growth and efficiency. Our expert consultants offer strategic insights, process optimization, and market analysis to enhance your operations. </p>	
-						</div>
-						<!-- End Single Service -->
-					</div>
-					<div class="col-lg-4 col-md-6 col-12">
-						<!-- Start Single Service -->
-						<div class="single-service">
 							<i class="icofont icofont-search-job"></i>
 							<h4><a href="https://mecthr.com/service-details.html">HR Consultancy</a></h4>
 							<p>
 Unlock your workforce’s potential with our tailored HR solutions. From talent acquisition to performance management, we ensure seamless HR processes that align with your organizational goals.
 </p>	
+						</div>
+						<!-- End Single Service -->
+					</div>
+					<div class="col-lg-4 col-md-6 col-12">
+						<!-- Start Single Service -->
+						
+
+
+
+
+						<div class="single-service">
+							<i class="icofont-businessman"></i>
+							<h4><a href="https://mecthr.com/service-details.html">Business Consultancy</a></h4>
+							<p>At Career TechPro HR Est, we partner with businesses to drive growth and efficiency. Our expert consultants offer strategic insights, process optimization, and market analysis to enhance your operations. </p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -214,26 +219,11 @@ Unlock your workforce’s potential with our tailored HR solutions. From talent 
 
 				<div class="row">
 					<!-- Single Table -->
-					<div class="col-lg-4 col-md-6 col-12">
-						<div class="single-table">
-							<!-- Table Head -->
-							<div class="table-head">
-								<h4 class="title">Business Services</h4>	
-							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Sourcing & Procurement</li>
-								<li><i class="icofont icofont-ui-check"></i>Advertising Researches </li>
-								<li><i class="icofont icofont-ui-check"></i>Management Conultancy</li>
-								<li><i class="icofont icofont-ui-check"></i>Marketing Research</li>
-								<li><i class="icofont icofont-ui-check"></i></i>Project Development</li>
-								<li><i class="icofont icofont-ui-check"></i></i>Media Studies</li>
-							</ul>
-							<!-- Table Bottom -->
-						</div>
-					</div>
-					<!-- End Single Table-->
-					<!-- Single Table -->
+
+
+
+
+
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="single-table">
 							<!-- Table Head -->
@@ -248,6 +238,27 @@ Unlock your workforce’s potential with our tailored HR solutions. From talent 
 								<li><i class="icofont icofont-ui-check"></i>Compliance</li>
 								<li><i class="icofont icofont-ui-check"></i>Training and Development</li>
 								<li><i class="icofont icofont-ui-check"></i>Compensation and Benefits</li>
+							</ul>
+							<!-- Table Bottom -->
+						</div>
+					</div>
+					<!-- End Single Table-->
+					<!-- Single Table -->
+					
+					<div class="col-lg-4 col-md-6 col-12">
+						<div class="single-table">
+							<!-- Table Head -->
+							<div class="table-head">
+								<h4 class="title">Business Services</h4>	
+							</div>
+							<!-- Table List -->
+							<ul class="table-list">
+								<li><i class="icofont icofont-ui-check"></i>Sourcing & Procurement</li>
+								<li><i class="icofont icofont-ui-check"></i>Advertising Researches </li>
+								<li><i class="icofont icofont-ui-check"></i>Management Conultancy</li>
+								<li><i class="icofont icofont-ui-check"></i>Marketing Research</li>
+								<li><i class="icofont icofont-ui-check"></i></i>Project Development</li>
+								<li><i class="icofont icofont-ui-check"></i></i>Media Studies</li>
 							</ul>
 							<!-- Table Bottom -->
 						</div>
