--- a/contact-us.html
+++ b/contact-us.html
@@ -71,8 +71,8 @@
 						<div class="col-lg-6 col-md-7 col-12">
 							<!-- Top Contact -->
 							<ul class="top-contact">
-								<li><i class="fa fa-phone"></i>+971 567589310(UAE),+91 9944877177(ind)</li>
-								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com"> asmathwise@gmail.com</a></li>
+								<li><i class="fa fa-phone"></i>+971 567589310(UAE)</li>
+								<li><i class="fa fa-envelope"></i><a href="mailto:support@yourmail.com">careertechpro@outlook.com</a></li>
 							</ul>
 							<!-- End Top Contact -->
 						</div>
@@ -249,7 +249,7 @@
 						</div>
 						<div class="col-lg-6">
 							<div class="contact-us-form">
-								<h3>Corporate Office</h3>
+								<h3>Franchise Partner</h3>
 								<p><br>Address: 106, Yasmeen Parveen Manzil<br>Bright Garden <br>Chettipalayam Road<br>coimbatore- 641201<br><br>Phone: +91 9944877177, +91 9445883813<br><br>Email:  asmathwise@gmail.com</p>
 							</div>
 						</div>
