changed contacts and added mail.php file

--- a/contact-us.html
+++ b/contact-us.html
@@ -192,7 +192,7 @@
 								<h2>Contact With Us</h2>
 								<p>If you have any questions please fell free to contact with us.</p>
 								<!-- Form -->
-								<form class="form" method="post" action="https://mecthr.com/mail/mail.php">
+								<form class="form" method="post" action="/mail.php">
 									<div class="row">
 										<div class="col-lg-6">
 											<div class="form-group">
@@ -236,7 +236,7 @@
 				</div>
 			</div>
 			
-			<div class="container" style="padding-top:10px">
+			<div class="container" style="padding-top:20px">
 				<div class="inner">
 					<div class="row"> 
 						<div class="col-lg-6">
@@ -250,9 +250,18 @@
 						<div class="col-lg-6">
 							<div class="contact-us-form">
 								<h3>Franchise Partner</h3>
+								<br><h5>Asmathullah</h5>
 								<p><br>Address: 106, Yasmeen Parveen Manzil<br>Bright Garden <br>Chettipalayam Road<br>coimbatore- 641201<br><br>Phone: +91 9944877177, +91 9445883813<br><br>Email:  asmathwise@gmail.com</p>
 							</div>
 						</div>
+						<div class="col-lg-6">
+							<div class="contact-us-form">
+								<h3>Franchise Partner</h3>
+								<br><h5>Sanjay</h5>
+								<p><br>Address: 64, 3rd floor<br>Khader Nawaz Rd <br>Nungambakkam<br>chennai- 600006<br><br>Phone: +91 9443724213<br><br>Email:  careertechpro@gmail.com</p>
+							</div>
+						</div>
+					
 					</div>
 				</div>				
 			</div>		
@@ -306,12 +315,12 @@
 								<h2>Open Hours</h2>
 								<p>Career TechPro HR Est operates during regular business hours.</p>
 								<ul class="time-sidual">
-									<li class="day">Monday <span>9.00-20.00</span></li>
-									<li class="day">Tuesday <span>9.00-20.00</span></li>
-									<li class="day">Wednesday <span>9.00-20.00</span></li>
-									<li class="day">Thursday <span>8.00-20.00</span></li>
-									<li class="day">Friday <span>9.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-14.00</span></li>	
+									<li class="day">Monday <span>9.00-19.00</span></li>
+									<li class="day">Tuesday <span>9.00-19.00</span></li>
+									<li class="day">Wednesday <span>9.00-19.00</span></li>
+									<li class="day">Thursday <span>8.00-19.00</span></li>
+									<li class="day">Friday <span>9.00-19.00</span></li>
+									<li class="day">Saturday <span>9.00-13.00</span></li>	
                                     <li class="day">Sunday <span>Closed</span></li>									
 								</ul>
 							</div>
