--- a/index.html
+++ b/index.html
@@ -255,21 +255,20 @@
 					<div class="col-lg-4 col-md-6 col-12">
 						<!-- Start Single Service -->
 						<div class="single-service">
-							<i class="icofont-businessman"></i>
-							<h4><a href="https://mecthr.com/service-details.html">Business Consultancy</a></h4>
-							<p>At Career TechPro HR Est, we partner with businesses to drive growth and efficiency. Our expert consultants offer strategic insights, process optimization, and market analysis to enhance your operations. </p>	
+							<i class="icofont icofont-search-job"></i>
+							<h4><a href="/hr-consultancy.html">HR Consultancy</a></h4>
+							<p>
+Unlock your workforce’s potential with our tailored HR solutions. From talent acquisition to performance management, we ensure seamless HR processes that align with your organizational goals.
+</p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
 					<div class="col-lg-4 col-md-6 col-12">
 						<!-- Start Single Service -->
 						<div class="single-service">
-							<i class="icofont icofont-search-job"></i>
-							<h4><a href="https://mecthr.com/service-details.html">HR Consultancy</a></h4>
-							<p>
-Unlock your workforce’s potential with our tailored HR solutions. From talent acquisition to performance management, we ensure seamless HR processes that align with your organizational goals.
-</p>
-	
+							<i class="icofont-businessman"></i>
+							<h4><a href="/hr-consultancy.html">Business Consultancy</a></h4>
+							<p>At Career TechPro HR Est, we partner with businesses to drive growth and efficiency. Our expert consultants offer strategic insights, process optimization, and market analysis to enhance your operations. </p>	
 						</div>
 						<!-- End Single Service -->
 					</div>
@@ -296,26 +295,6 @@ Unlock your workforce’s potential with our tailored HR solutions. From talent 
 						<div class="single-table">
 							<!-- Table Head -->
 							<div class="table-head">
-								<h4 class="title">Business Services</h4>	
-							</div>
-							<!-- Table List -->
-							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Sourcing & Procurement</li>
-								<li><i class="icofont icofont-ui-check"></i>Advertising Researches </li>
-								<li><i class="icofont icofont-ui-check"></i>Management Conultancy</li>
-								<li><i class="icofont icofont-ui-check"></i>Marketing Research</li>
-								<li><i class="icofont icofont-ui-check"></i></i>Project Development</li>
-								<li><i class="icofont icofont-ui-check"></i></i>Media Studies</li>
-							</ul>
-							<!-- Table Bottom -->
-						</div>
-					</div>
-					<!-- End Single Table-->
-					<!-- Single Table -->
-					<div class="col-lg-4 col-md-6 col-12">
-						<div class="single-table">
-							<!-- Table Head -->
-							<div class="table-head">
 								<h4 class="title">HR Services</h4>	
 							</div>
 							<!-- Table List -->
@@ -330,6 +309,28 @@ Unlock your workforce’s potential with our tailored HR solutions. From talent 
 							<!-- Table Bottom -->
 						</div>
 					</div>
+					<!-- End Single Table-->
+					<!-- Single Table -->
+					<div class="col-lg-4 col-md-6 col-12">
+						<div class="single-table">
+							<!-- Table Head -->
+							<div class="table-head">
+								<h4 class="title">Business Services</h4>	
+							</div>
+							<!-- Table List -->
+							<ul class="table-list">
+								<li><i class="icofont icofont-ui-check"></i>Sourcing & Procurement</li>
+								<li><i class="icofont icofont-ui-check"></i>Advertising Researches </li>
+								<li><i class="icofont icofont-ui-check"></i>Management Conultancy</li>
+								<li><i class="icofont icofont-ui-check"></i>Marketing Research</li>
+								<li><i class="icofont icofont-ui-check"></i></i>Project Development</li>
+								<li><i class="icofont icofont-ui-check"></i></i>Media Studies</li>
+							</ul>
+							<!-- Table Bottom -->
+						</div>
+					</div>
+
+					
 					<!-- End Single Table-->
 					<!-- Single Table -->
 					<!-- <div class="col-lg-4 col-md-6 col-12">
@@ -405,12 +406,12 @@ Unlock your workforce’s potential with our tailored HR solutions. From talent 
 								<h2>Open Hours</h2>
 								<p>Career TechPro HR Est operates during regular business hours.</p>
 								<ul class="time-sidual">
-									<li class="day">Monday <span>9.00-20.00</span></li>
-									<li class="day">Tuesday <span>9.00-20.00</span></li>
-									<li class="day">Wednesday <span>9.00-20.00</span></li>
-									<li class="day">Thursday <span>8.00-20.00</span></li>
-									<li class="day">Friday <span>9.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-14.00</span></li>	
+									<li class="day">Monday <span>9.00-19.00</span></li>
+									<li class="day">Tuesday <span>9.00-19.00</span></li>
+									<li class="day">Wednesday <span>9.00-19.00</span></li>
+									<li class="day">Thursday <span>8.00-19.00</span></li>
+									<li class="day">Friday <span>9.00-19.00</span></li>
+									<li class="day">Saturday <span>9.00-13.00</span></li>	
                                     <li class="day">Sunday <span>Closed</span></li>									
 								</ul>
 							</div>
