--- a/services.html
+++ b/services.html
@@ -180,7 +180,7 @@
 						<!-- Start Single Service -->
 						<div class="single-service">
 							<i class="icofont icofont-search-job"></i>
-							<h4><a href="https://mecthr.com/service-details.html">HR Consultancy</a></h4>
+							<h4><a href="/hr-consultancy.html">HR Consultancy</a></h4>
 							<p>
 Unlock your workforce’s potential with our tailored HR solutions. From talent acquisition to performance management, we ensure seamless HR processes that align with your organizational goals.
 </p>	
@@ -196,7 +196,7 @@ Unlock your workforce’s potential with our tailored HR solutions. From talent 
 
 						<div class="single-service">
 							<i class="icofont-businessman"></i>
-							<h4><a href="https://mecthr.com/service-details.html">Business Consultancy</a></h4>
+							<h4><a href="/hr-consultancy.html">Business Consultancy</a></h4>
 							<p>At Career TechPro HR Est, we partner with businesses to drive growth and efficiency. Our expert consultants offer strategic insights, process optimization, and market analysis to enhance your operations. </p>	
 						</div>
 						<!-- End Single Service -->
@@ -318,12 +318,12 @@ Unlock your workforce’s potential with our tailored HR solutions. From talent 
 								<h2>Open Hours</h2>
 								<p>Career TechPro HR Est operates during regular business hours.</p>
 								<ul class="time-sidual">
-									<li class="day">Monday <span>9.00-20.00</span></li>
-									<li class="day">Tuesday <span>9.00-20.00</span></li>
-									<li class="day">Wednesday <span>9.00-20.00</span></li>
-									<li class="day">Thursday <span>8.00-20.00</span></li>
-									<li class="day">Friday <span>9.00-20.00</span></li>
-									<li class="day">Saturday <span>9.00-14.00</span></li>	
+									<li class="day">Monday <span>9.00-19.00</span></li>
+									<li class="day">Tuesday <span>9.00-19.00</span></li>
+									<li class="day">Wednesday <span>9.00-19.00</span></li>
+									<li class="day">Thursday <span>8.00-19.00</span></li>
+									<li class="day">Friday <span>9.00-19.00</span></li>
+									<li class="day">Saturday <span>9.00-13.00</span></li>	
                                     <li class="day">Sunday <span>Closed</span></li>									
 								</ul>
 							</div>
