Updated franchise partners in contacts

--- a/contact-us.html
+++ b/contact-us.html
@@ -261,7 +261,16 @@
 								<p><br>Address: 64, 3rd floor<br>Khader Nawaz Rd <br>Nungambakkam<br>chennai- 600006<br><br>Phone: +91 9443724213<br><br>Email:  careertechpro@gmail.com</p>
 							</div>
 						</div>
+
+					<div class="col-lg-6">
+							<div class="contact-us-form">
+								<h3>Franchise Partner</h3>
+								<br><h5>Global Tech Resources</h5>
+								<p><br>Address: No. 2325<br>Front Street East<br>Suite 1123<br>Toronto<br>Ontario<br>M5V 3S8<br>Canada<br><br>WhatsApp: +1 4169185132</p>
+							</div>
+						</div>
 					
+					</div>
 					</div>
 				</div>				
 			</div>		
