--- a/about-us.html
+++ b/about-us.html
@@ -275,7 +275,7 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-12">
 							<div class="copyright-content">
-								<p>© Copyright 1924  |<a href="https://www.linkedin.com/in/aravindh99/"> Developed by Aravindh (XTOWN)</a> </p>
+								<p>a>© Copyright 2024  |  All Rights Reserved by Career TechPro HR Est  </p>
 							</div>
 						</div>
 					</div>
