--- a/contact-us.html
+++ b/contact-us.html
@@ -243,7 +243,7 @@
 							<div class="contact-us-form">
 								<h3>Head Office</h3>
 								<p><br>Address: PO Box No, 213<br>2nd floor Arzoo Building<br>Al Nahda road<br>Near Al Quasis Metro<br>Dubai, United arab Emirates
-							<br>	<br>Phone: +971 567589310, +971 503168183<br>+971 565105170 
+							<br>	<br>Phone: +971 567589310, +971 503168183 
 							<br>	<br>Email: careertechpro@outlook.com </p>
 							</div>
 						</div>
@@ -357,7 +357,7 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-12">
 							<div class="copyright-content">
-								<p>© Copyright 2024  |<a href="https://www.linkedin.com/in/aravindh99/"> Developed by Aravindh (XTOWN)</a> </p>
+								<p>© Copyright 2024  |  All Rights Reserved by Career TechPro HR Est  </p>
 							</div>
 						</div>
 					</div>
