--- a/download.html
+++ b/download.html
@@ -284,7 +284,7 @@
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-12">
 							<div class="copyright-content">
-								<p>© Copyright 2024  |<a href="https://www.linkedin.com/in/aravindh99/"> Developed by Aravindh (XTOWN)</a> </p>
+								<p>© Copyright 2024  |  All Rights Reserved by Career TechPro HR Est </p>
 							</div>
 						</div>
 					</div>
